# boss-agent

./: .gitignore  README.md  README_zh-CN.md  _gen_test.py  changelog.md  gen_test.py  license  pyproject.toml
src/boss_agent/: __init__.py  __main__.py  decomposer.py  executor.py  llm_client.py  llm_decomposer.py
tests/: test_decomposer.py  test_executor.py  test_llm_client.py  test_llm_decomposer.py
